infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: chinmay024/expiration
          resources:
            limits:
              memory: "512Mi" # Increase the memory limit to 512Mi
              cpu: "400m"     # Increase the CPU limit to 400m
            requests:
              memory: "256Mi" # Increase the memory request to 256Mi
              cpu: "200m"     # Increase the CPU request to 200m
