infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: chinmay024/client
          resources:
            limits:
              memory: "512Mi" # Increase the memory limit to 512Mi
              cpu: "400m"     # Increase the CPU limit to 400m
            requests:
              memory: "256Mi" # Increase the memory request to 256Mi
              cpu: "200m"     # Increase the CPU request to 200m
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
