infra/k8s/expiration-redis-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis
          resources:
            limits:
              memory: "256Mi" # Set the desired memory limit
              cpu: "200m"     # Set the desired CPU limit
            requests:
              memory: "128Mi" # Set the desired memory request
              cpu: "100m"     # Set the desired CPU request
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis
  ports:
  - name: db
    protocol: TCP
    port: 6379
    targetPort: 6379
