infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
          resources:
            limits:
              memory: "256Mi" # Set the desired memory limit
              cpu: "200m"     # Set the desired CPU limit
            requests:
              memory: "128Mi" # Set the desired memory request
              cpu: "100m"     # Set the desired CPU request
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec:
  selector:
    app: orders-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
