infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: chinmay024/tickets
          resources:
            limits:
              memory: "512Mi" # Increase the memory limit to 512Mi
              cpu: "400m"     # Increase the CPU limit to 400m
            requests:
              memory: "256Mi" # Increase the memory request to 256Mi
              cpu: "200m"     # Increase the CPU request to 200m
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
